[gd_scene load_steps=3 format=3 uid="uid://dl8q7fsbr8sr2"]

[ext_resource type="Script" uid="uid://cbsqwjxaaq7n2" path="res://scenes/views/image_tag_editor.gd" id="1_intuo"]
[ext_resource type="Script" uid="uid://cbvywtnq7naax" path="res://scenes/views/image_view.gd" id="1_kvsck"]

[node name="ImageView" type="VSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 553.0
offset_right = -553.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_kvsck")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FileName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="ImagePreview" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 2
stretch_mode = 5

[node name="ExplorerButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open in Explorer"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="Tags" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ImageTagEditor" type="VBoxContainer" parent="TabContainer/Tags"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("1_intuo")

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Tags/ImageTagEditor"]
layout_mode = 2

[node name="TagInput" type="LineEdit" parent="TabContainer/Tags/ImageTagEditor/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add a new tag"
keep_editing_on_text_submit = true

[node name="PopupMenu" type="PopupMenu" parent="TabContainer/Tags/ImageTagEditor/HBoxContainer/TagInput"]
auto_translate_mode = 1

[node name="SubmitTag" type="Button" parent="TabContainer/Tags/ImageTagEditor/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="PanelContainer" type="Panel" parent="TabContainer/Tags/ImageTagEditor"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkPanel"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Tags/ImageTagEditor/PanelContainer"]
layout_mode = 2
offset_right = 381.0
offset_bottom = 470.0

[node name="TagContainer" type="FlowContainer" parent="TabContainer/Tags/ImageTagEditor/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Tags/ImageTagEditor"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="TabContainer/Tags/ImageTagEditor/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Apply
"

[node name="DiscardButton" type="Button" parent="TabContainer/Tags/ImageTagEditor/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Discard
"

[connection signal="text_submitted" from="TabContainer/Tags/ImageTagEditor/HBoxContainer/TagInput" to="TabContainer/Tags/ImageTagEditor" method="_on_add_tag"]
[connection signal="pressed" from="TabContainer/Tags/ImageTagEditor/HBoxContainer/SubmitTag" to="TabContainer/Tags/ImageTagEditor" method="_on_add_tag_pressed"]
[connection signal="pressed" from="TabContainer/Tags/ImageTagEditor/HBoxContainer2/ApplyButton" to="TabContainer/Tags/ImageTagEditor" method="save_changes"]
[connection signal="pressed" from="TabContainer/Tags/ImageTagEditor/HBoxContainer2/DiscardButton" to="TabContainer/Tags/ImageTagEditor" method="save_changes"]
